上传多个导入模板

--- a/report/result/environment.properties
+++ b/report/result/environment.properties
@@ -1,5 +1,5 @@
 Browser=Firefox2
 Browser.version=773
-stand=songqin_teach4
-Apiur1= http://qa.shandong.giiatop.com
-python.version=3.6
+name=四川分类系统接口测试
+api_url= https://platform.giiatop.com/sc
+python版本=3.6
