--- a/report/result/environment.properties
+++ b/report/result/environment.properties
@@ -1,5 +1,3 @@
-Browser=Firefox2
-Browser.version=773
-name=四川分类系统接口测试
-api_url= https://platform.giiatop.com/sc
-python版本=3.6
+project=sichuan_classifySystem
+web_url= https://platform.giiatop.com/sc/pt/#/PracticeCMS/Login
+python_version=3.6
